--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,18 +7,18 @@
 
     /*========== Colors ==========*/
     /* Change favorite color */
-    --hue-color: 223; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+    --hue-color: 0; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
     /* HSL color mode */
     --first-color:hsl(var(--hue-color), 53%, 39%);
     --first-color-second: hsl(var(--hue-color), 69%, 61%);
     --first-color-alt: hsl(var(--hue-color), 57%, 53%);
     --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
-    --title-color: hsl(var(--hue-color), 8%, 15%);
-    --text-color: hsl(var(--hue-color), 8%, 45%);
+    --title-color: hsl(var(var(--hue-color)), 100%, 40%);
+    --text-color: hsl(var(var(--hue-color)), 100%, 40%);
     --text-color-light: hsl(var(--hue-color), 8%, 65%);
     --input-color: hsl(var(--hue-color), 70%, 96%);
-    --body-color: hsl(var(--hue-color), 60%, 99%);
+    --body-color: hsl(var(var(--hue-color)), 100%, 40%);
     --container-color: #fff;
     --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
     --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
@@ -641,8 +641,6 @@ img {
     background-color: #fff;
     width: 75%;
     border-radius: .5rem;
-    display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: 30px;
