--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -250,6 +250,7 @@ img {
 
 /* Change background header */
 .scroll-header{
+    background-color: white;
     box-shadow: 0 -1px 4px rgba(0,0,0,.15);
 }
 
