--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -376,6 +376,43 @@ img {
     display: inline-flex;
     align-items: center;
 }
+
+/*==================== PROJECT ====================*/
+.service_container {
+    overflow: initial;
+    width: 100%;
+}
+
+.service_content.grid{
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    width: 25%;
+    border-radius: .5rem;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin: 30px;
+    box-shadow: 0 8px 16px rgba(0,0,0,.45);
+}
+
+.service_img{
+    border-radius: .5rem;
+    width: 400px;
+    height: 300px;
+}
+
+.service_title{
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-0-5);
+    text-align: center;
+}
+
+.service_description{
+    margin-bottom: var(--mb-0-75);
+    margin: 5px;
+}
+
 /*==================== ABOUT ====================*/
 .about__description{
     text-align: center;
@@ -585,7 +622,7 @@ img {
 }
 
 .swiper-button-prev::after,
-.swiper-button-next::after{
+.swiper-button-next::after{ 
     content:'';
 }
 
@@ -755,8 +792,9 @@ img {
         column-gap: 0;
     }
 
-    .home__content{
-        grid-template-columns: .25fr 3fr;
+    .home__social{
+        grid-template-columns: max-content max-content;
+        column-gap: 1rem;
     }
 
     .home__blob{
