--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -550,27 +550,17 @@ img {
     text-align: justify;
 }
 
-.certif__img{
+.certif__img1{
+    width: 50%;
+    height: 40vh;
+}
+
+.certif__img2{
     width: 30%;
     height: 40vh;
-    align-items: space-between;
-    border-radius: .5rem;
+    margin-right: 150px;
 }
 
-.certificate__container{
-    overflow: initial;
-    margin-bottom: 15px;
-}
-
-.certificate__content{
-    padding: 0 1.5rem;
-}
-
-.certificate__img{
-    width: 265px;
-    border-radius: .5rem;
-    justify-self: center;
-}
 
 .swiper-button-prev::after,
 .swiper-button-next::after{ 
@@ -1013,6 +1003,14 @@ img {
         display: flex;
         justify-content: center;
         margin-bottom: 25px;
+    }
+
+    .super-description{
+        margin: 10px;
+    }
+
+    .certif__data{
+        margin-top: 110px;
     }
 
     .skills__container{
