--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -818,6 +818,24 @@ img {
         margin-right: var(--mb-1);
     }
 
+    .certif__container {
+        flex-direction: column;
+        align-items: center;
+    }
+      
+    .certif__data {
+        margin-right: 0;
+        text-align: center;
+    }
+
+    .certif__img1,
+    .certif__img2 {
+        width: 100%;
+        height: auto;
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+
     .nav__menu{
         padding: 2rem .25rem 4rem;
     }
