--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -507,7 +507,7 @@ img {
     background-color: white;
     border-radius: .5rem;
     font-size: 1.2rem;
-    border: solid black;
+    box-shadow: 0 8px 16px rgba(0,0,0,.45);
     text-align: center;
 }
 /*==================== activity ====================*/
@@ -519,6 +519,8 @@ img {
 
 .activity__subtitle{
     margin-bottom: 20px;
+    color: var(--first-color);
+    font-weight: var(--font-semi-bold);
 }
 
 .activity__container{
@@ -817,59 +819,35 @@ img {
 /*==================== MEDIA QUERIES ====================*/
 /* For small devices */
 @media screen and (max-width: 350px){
-    .container{
-        margin-left: var(--mb-1);
-        margin-right: var(--mb-1);
-    }
-    
-    .nav__menu{
-        padding: 2rem .25rem 4rem;
+    .super__title,
+    .super_subtitle{
+        text-align: center;
+        margin-left: 120px;
     }
 
-    .nav__list{
-        column-gap: 0;
-    } 
-
-    .home__social{
-        grid-template-columns: max-content max-content;
-        column-gap: 1rem;
-    }
-
-    .home__blob{
-        width: 180px; 
-    }
-
-    .super__container{
+    .super__subtitle{
         display: none;
     }
 
-    .skills__title{
-        font-size: var(--normal-font-size);
-    }
-
-    .qualification__data{
-        gap: .5rem;
-    }
-
-    .project__container
-    {
-        display: flex;
-        flex-direction: row;
-        overflow: initial;
-        width: 100%;
-    }
-
-    .project__content.grid{
-        background-color: #fff;
-        width: 75%;
-        border-radius: .5rem;
+    .super__container{
+        margin: 0;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin: 30px;
-        box-shadow: 0 8px 16px rgba(0,0,0,.45);
+        margin-bottom: 50px;
+        background-color: var(--first-color);
     }
+
+    .icon-arange{
+        margin-left: 20px;
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .super-description{
+        margin: 5px;
+    }
+    
 }
 
 /* For medium devices */
@@ -990,8 +968,6 @@ img {
     .home__scroll-button{
         margin-left: 3rem;
     }
-
-
 
     .about__container{
         column-gap: 5rem;
